--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
             <!-- Paragraph text describing what a web application is -->
             <p> 
-                A web application is a software application that runs on web servers and is accessed through a web browser. Web applications can be accessed by many users simultaneously across the internet, or by a limited number of users on an intranet. Web applicaitions can have a massive variety of purposes, such as gaming, media services, banking, learning, and thousands of others depending on the intent of their creators.
+                A web application is a software application that runs on web servers and is accessed through a web browser. Web applications can be accessed by many users simultaneously across the internet, or by a limited number of users on an intranet. Web applications can have a massive variety of purposes, such as gaming, media services, banking, learning, and thousands of others depending on the intent of their creators.
             </p>
         </div>
 
